--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,9 @@
 		<meta name="description" content="Weather app" />
 		<title>Weather App</title>
 		<style>
-			* {
-				font-family: 'Montserrat';
-			}
-			body {
-				display: flex;
-				justify-content: center;
-			}
+			@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 		</style>
+
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,9 +17,7 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-		<title></title>
-	</head>
+    --></head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
